# desktop-app

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: release-drafter.yml
.github/workflows/: release.yaml
.zed/: settings.json
assets/: palettes.json
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: README.md  default.json
src-tauri/src/: lib.rs  main.rs
