[package]
name = "ctf-rs-ui"
description = "Tauri and Leptos based cross-platform Desktop Application for CTF-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/libctf/frontend"
keywords = ["tauri", "ctf", "ui", "desktop", "leptos"]
categories = ["web-programming::http-client", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
